--- a/healthcare-redis-bedrock-gen-ai.ipynb
+++ b/healthcare-redis-bedrock-gen-ai.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "1. [Generative AI for Healthcare Industry](#1.-Generative-AI-for-Healthcare-Industry)\n",
     "1. [Set Up](#2.-Set-Up-and-API-walkthrough)\n",
-    "2. [Writing a Blog](#3.-Generate-Radiology-Report-for-a-patient)"
+    "2. [Generate Radiology Report for a Patient](#3.-Generate-Radiology-Report-for-a-patient)"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "id": "f29e7f1a-d2ee-4d1f-a074-d65f1dae3aee",
    "metadata": {},
    "source": [
-    "#### Let's now try out the Amazon Bedrock model to have it write us a blog on making strong business decisions"
+    "#### Let's now try out the Amazon Bedrock model to produce a radiology report for a patient"
    ]
   },
   {
